# planora

./: .env  .env.local.template  .gitignore  Makefile  README.md  pyproject.toml
src/planora/: __init__.py  __main__.py
src/planora/agents/: filter.py  monitor.py  registry.py  runner.py  stall.py  stream.py
src/planora/cli/: __init__.py  agents.py  app.py  callbacks.py  plan.py
src/planora/core/: config.py  events.py  workspace.py
src/planora/observability/: __init__.py  hooks.py  telemetry.py
src/planora/prompts/: contracts.py  plan.py
src/planora/tui/: __init__.py  app.py  callbacks.py
src/planora/tui/screens/: __init__.py  dashboard.py  report.py  wizard.py
src/planora/tui/styles/: app.tcss
src/planora/tui/widgets/: __init__.py  agent_activity.py  agent_output.py  cost_tracker.py  event_log.py  pipeline.py  status_panel.py
src/planora/workflow/: __init__.py  engine.py  plan.py  report.py
tests/: conftest.py
tests/test_agents/: test_filter.py  test_monitor.py  test_registry.py  test_runner.py  test_stall.py  test_stream.py
tests/test_cli/: test_agents.py  test_callbacks.py  test_plan.py
tests/test_core/: test_config.py  test_workspace.py
tests/test_integration/: test_pipeline.py
tests/test_observability/: test_telemetry.py
tests/test_prompts/: test_plan.py
tests/test_tui/: test_app.py  test_wizard_report.py
tests/test_workflow/: test_engine.py  test_plan.py  test_report.py
